crates/flowscope-core/tests/snapshots/snapshots__run_bigquery_snapshot_test@bigquery_select_except_replace_combined.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "output_74d22f755ec62dbc",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_7253befe2c400508",
          "type": "table",
          "label": "products",
          "qualifiedName": "products"
        }
      ],
      "edges": [
        {
          "id": "edge_cc7cd87e6a43680f",
          "from": "table_7253befe2c400508",
          "to": "output_74d22f755ec62dbc",
          "type": "data_flow",
          "approximate": true
        }
      ],
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "output_74d22f755ec62dbc",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_74d22f755ec62dbc"
          }
        ]
      },
      {
        "id": "table_7253befe2c400508",
        "type": "table",
        "label": "products",
        "canonicalName": {
          "name": "products"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_7253befe2c400508"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_cc7cd87e6a43680f",
        "from": "table_7253befe2c400508",
        "to": "output_74d22f755ec62dbc",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [
    {
      "severity": "info",
      "code": "APPROXIMATE_LINEAGE",
      "message": "SELECT * from 'products' - column list unknown without schema metadata",
      "statementIndex": 0
    }
  ],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 0,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 1
    },
    "hasErrors": false
  }
}
