crates/flowscope-core/tests/snapshots/snapshots__run_bigquery_snapshot_test@bigquery_unnest_basic.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "column_26289b33f575fdbb",
          "type": "column",
          "label": "user_id"
        },
        {
          "id": "column_35d356053710fc8f",
          "type": "column",
          "label": "tag",
          "qualifiedName": "users.tag"
        },
        {
          "id": "column_6f92d9546d1c3291",
          "type": "column",
          "label": "tag"
        },
        {
          "id": "column_cb9e7c434971f5fc",
          "type": "column",
          "label": "user_id",
          "qualifiedName": "users.user_id"
        },
        {
          "id": "output_74d22f755ec62dbc",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_10a0682dff76cdbc",
          "type": "table",
          "label": "users",
          "qualifiedName": "users"
        }
      ],
      "edges": [
        {
          "id": "edge_139ec018c5a2cebf",
          "from": "column_35d356053710fc8f",
          "to": "column_6f92d9546d1c3291",
          "type": "data_flow"
        },
        {
          "id": "edge_50898ea23b79c9f1",
          "from": "column_cb9e7c434971f5fc",
          "to": "column_26289b33f575fdbb",
          "type": "data_flow"
        },
        {
          "id": "edge_86955ab0ed5de3e8",
          "from": "output_74d22f755ec62dbc",
          "to": "column_6f92d9546d1c3291",
          "type": "ownership"
        },
        {
          "id": "edge_e5a9dfe8f279b310",
          "from": "output_74d22f755ec62dbc",
          "to": "column_26289b33f575fdbb",
          "type": "ownership"
        },
        {
          "id": "edge_f430e6d5281a1dfc",
          "from": "table_10a0682dff76cdbc",
          "to": "column_cb9e7c434971f5fc",
          "type": "ownership"
        },
        {
          "id": "edge_fbb0cefa72e20652",
          "from": "table_10a0682dff76cdbc",
          "to": "column_35d356053710fc8f",
          "type": "ownership"
        }
      ],
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_26289b33f575fdbb",
        "type": "column",
        "label": "user_id",
        "canonicalName": {
          "name": "user_id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_26289b33f575fdbb"
          }
        ]
      },
      {
        "id": "column_5235f558f510c25e",
        "type": "column",
        "label": "user_id",
        "canonicalName": {
          "schema": "users",
          "name": "user_id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_cb9e7c434971f5fc"
          }
        ]
      },
      {
        "id": "column_6f92d9546d1c3291",
        "type": "column",
        "label": "tag",
        "canonicalName": {
          "name": "tag"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_6f92d9546d1c3291"
          }
        ]
      },
      {
        "id": "column_d6db6b522d1f61b3",
        "type": "column",
        "label": "tag",
        "canonicalName": {
          "schema": "users",
          "name": "tag"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_35d356053710fc8f"
          }
        ]
      },
      {
        "id": "output_74d22f755ec62dbc",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_74d22f755ec62dbc"
          }
        ]
      },
      {
        "id": "table_10a0682dff76cdbc",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_10a0682dff76cdbc"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_139ec018c5a2cebf",
        "from": "column_d6db6b522d1f61b3",
        "to": "column_6f92d9546d1c3291",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_50898ea23b79c9f1",
        "from": "column_5235f558f510c25e",
        "to": "column_26289b33f575fdbb",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_86955ab0ed5de3e8",
        "from": "output_74d22f755ec62dbc",
        "to": "column_6f92d9546d1c3291",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_e5a9dfe8f279b310",
        "from": "output_74d22f755ec62dbc",
        "to": "column_26289b33f575fdbb",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_f430e6d5281a1dfc",
        "from": "table_10a0682dff76cdbc",
        "to": "column_5235f558f510c25e",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_fbb0cefa72e20652",
        "from": "table_10a0682dff76cdbc",
        "to": "column_d6db6b522d1f61b3",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 4,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
